@@ -18,8 +18,8 @@
 #define SWITCHYARD_DEVICE_NAME "switchyard"
 #define SWITCHYARD_GPIO_ADDRESS "239.192.255.4"
 #define SWITCHYARD_GPIO_BUNDLE_SIZE 5
-#define SWITCHYARD_GPIO_SEND_PORT 2055
-#define SWITCHYARD_GPIO_RECV_PORT 2060
+#define SWITCHYARD_GPIO_GPI_PORT 2055
+#define SWITCHYARD_GPIO_GPO_PORT 2060
 #define SWITCHYARD_HWID 0xFFFF
 #define SWITCHYARD_LWRP_PORT 93
 #define SWITCHYARD_MAX_SLOTS 8
